using System;
using UnityEngine;

namespace Sample.Mediator.Sample3
{
    public class MediatorSample3 : MonoBehaviour
    {
        private void Start()
        {
            ConcreteMediator m = new ConcreteMediator();

            ConcreteColleague1 c1 = new ConcreteColleague1(m);
            ConcreteColleague2 c2 = new ConcreteColleague2(m);

            m.Colleague1 = c1;
            m.Colleague2 = c2;

            c1.Send("How are you?");
            c2.Send("Fine, thanks");
        }
    }
}